--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Event Website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
     <button>click me</button>
+
+    <script src="./script.js"></script>
 </body>
 </html>
