added 3 more p tag in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container d-flex flex-column justify-content-center align-items-center">
         <h1>Event Website</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
         <button class="btn btn-primary">click me</button>
     </div>
     
