--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>Event Website</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
-    <button>click me</button>
+    <div class="container d-flex flex-column justify-content-center align-items-center">
+        <h1>Event Website</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ea repellat, voluptates tempora laborum nesciunt?</p>
+        <button class="btn btn-primary">click me</button>
+    </div>
+    
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 </html>
